Add generated data, TF output, and pipeline logs

--- a/.gitignore
+++ b/.gitignore
@@ -12,10 +12,10 @@ venv/
 ENV/
 
 # Data files (large, can be regenerated)
-data/intermediate/
-data/output/
-data/pipeline_status.json
-logs/
+# data/intermediate/
+# data/output/
+# data/pipeline_status.json
+# logs/
 
 # Keep source data tracked (or exclude if too large)
 # data/source/
@@ -35,3 +35,9 @@ Thumbs.db
 
 # Planning docs (optional - remove if you want to share)
 # .planning/
+
+# Private keys
+key.txt
+key.txt.pub
+*.pem
+*.key
